6/7/13 change order of args to dot.Util.linear
6/7/13 upgrade from lodash-1.0.0-rc3 to lodash-1.2.1, fixes Chrome "source URL declaration is deprecated" warning
6/7/13 replace imagesloaded jquery plugin with PxLoader, integrate SimLauncher
6/5/13 remove redundant first arg from FillHighlighter constructor, node can be obtained via event.currentTarget
6/5/13 use PropertySet.multilink in BeakerLabelNode
6/4/13 integrate scenery.ButtonListener with molarity.CheckBox
6/4/13 convert to PropertySetB and DerivedProperty
6/4/13 fix "Molarity" tab name
6/3/13 delete backbone from lib/, delete FORT from config.js
6/3/13 delete css for scrollbars that was addressed in joist#6
6/3/13 use Property.link/unlink instead of addObserver/removeObserver
6/3/13 use Property.value instead of set() and get()
6/3/13 ditch fort, convert back to Property
5/31/13 migrate toFixed to dot.Util
5/31/13 migrate ChemUtils to nitroglycerin.ChemUtils
5/31/13 migrate ColorUtils.interpolateRGBA to scenery.Color
5/31/13 migrate StringUtils to phetcommon.util
# 0.0.0-3 5/31/13
5/31/13 publish dev version with sliders on the left
# 0.0.0-2 5/31/13
5/31/13 publish dev version with sliders on the right
5/30/13 ditch getCompleteBounds calls, after scenery reverted to bounds===completeBounds
5/30/13 varargs implementation of StringUtil.format
5/30/13 replace ColorRange with minColor and maxColor properties for Solute
5/30/13 make beaker label transparent
5/30/13 provide a predictable implementation of toFixed, so that model computations are accurate to the desired number of decimal places
5/30/13 make slider thumbs a bit taller, to improve usability on tablets
5/30/13 try the sliders on the right and the concentration read-out on the left
5/29/13 localize tick labels on beaker
5/29/13 fix water formula
5/29/13 use Fort.model instead of Fort.property (second phase)
5/29/13 use Fort.property instead of phetcommon.Property (first phase)
5/29/13 replace DebugOriginNode with scenery.Circle