@@ -1,3 +1,4 @@
+6/7/13 migrate FillHighlighter to scenery-phet from molarity and beers-law-lab
 6/7/13 change order of args to dot.Util.linear
 6/7/13 upgrade from lodash-1.0.0-rc3 to lodash-1.2.1, fixes Chrome "source URL declaration is deprecated" warning
 6/7/13 replace imagesloaded jquery plugin with PxLoader, integrate SimLauncher
